This is the changelog for this product's working copy.

v2.2.8 - 17/01/2012

== BUG FIXES ==
Removed redundant RemoveXSS function and improved security elsewhere

== NEW FEATURES ==

== MISC CHANGES ==
Removed Geshi highlighting - bloated download and probably not used by many. Might return as a plugin.


v2.2.7 Changelog - 23/12/2010

== BUG FIXES ==
# Strip slashes bug in forum and category titles
# Admin configuration of file upload types was missing
# PHP notices for undefined variables in the installer
# Fixed BBcode bug related to [left], [center] and [right] tags
# Fixed bug which prevented an admin from changing a users email address or timezone
# Subscribe to this post feature has been fixed
# Corrected several login links so they redirect back to the appropriate post
# An error message is now displayed if a upload does not meet the size restriction
# Fixed exploit allowing unintentional admin accounts
# Fixed a bug in monitor topics that was caused if a user changed their email address
# Fixed a bug that was causing our anti-XSS to be applied in place it shouldn't
# Fixed a security hole allowing any user to download attachements

== NEW FEATURES ==
# UPB API has begun to form, several classes have been added in the includes/api folder



-------------------------

v2.2.6 Changelog - 25/05/2009

== BUG FIXES ==
# Error message supressed if getimagesize doesn't work on avatars
# Removed IM background images from admin members
# AIM field added to Admin Members page
# Cancel button for forum deletion works
# Topic and post counts corrected when forums or categories are removed.
# Delete post button no longer appears on first post in a topic after quick reply.
# File attachment sizes now displayed in bytes, KB or MB
# Possible short-tag bug fixed in post.inc.php (Thanks Jim)
# Strip slashes bug in pm reply box


== NEW FEATURES ==
# Geshi Highlighting added for better code highlighting and multiple languages
# New images for instant messaging profile fields